--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -33,7 +33,7 @@ ul {
   margin-bottom: 1.4em;
 }
 
-p, ul, li, blockquote {
+p, ul, li, blockquote, figcaption {
   font-size: 1.2rem;
   line-height: 1.4;
 }
@@ -44,32 +44,6 @@ li {
 
 p {
   margin: 0 0 1em 0;
-}
-
-blockquote {
-  margin: 1em 0 1.5em 0;
-  font-size: 1.1rem;
-  padding-left: 2em;
-  padding-right: 2em;
-  text-indent: -0.6rem;
-  font-style: italic;
-  /*border-left: 2px solid #e8e8e8;*/
-}
-
-blockquote:before {
-  content: '“';
-}
-
-blockquote:after {
-  content: '”';
-}
-
-a {
-  color: #2e2ea2;
-}
-
-a:hover {
-  text-decoration: none;
 }
 
 figure {
@@ -83,23 +57,46 @@ figure img {
   width: 100%;
 }
 
-figcaption {
-  position: absolute;
-  right: 10px;
-  top: 20px;
-  font-size: 2.4rem;
-  mix-blend-mode: hard-light;
-  padding-right: 20px;
+figure.quote {
+  margin: 1.5em 0 3em;
 }
 
-figcaption:after {
-  position: absolute;
-  content: "";
-  left: 0px;
-  top: 0px;
-  height: 100%;
-  width: 100%;
-  background: linear-gradient(to right, transparent, gray);
+figure.quote blockquote {
+  margin: 0;
+  font-size: 1.2rem;
+  padding-left: 2em;
+  padding-right: 3em;
+  text-indent: -0.6rem;
+  font-style: italic;
+  /*border-left: 2px solid #e8e8e8;*/
+}
+
+figure.quote blockquote:before {
+  content: '“';
+}
+
+figure.quote blockquote:after {
+  content: '”';
+}
+
+figure.quote figcaption {
+  margin: 1rem 0 0;
+  font-size: 1.1rem;
+  padding-left: 3em;
+  padding-right: 3em;
+  text-indent: -1.1rem;
+}
+
+figure.quote figcaption:before {
+  content: '— ';
+}
+
+a {
+  color: #2e2ea2;
+}
+
+a:hover {
+  text-decoration: none;
 }
 
 #container {
