--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -22,6 +22,7 @@ h2 {
 h3 {
   font-size: 1.6rem;
   margin: 1.6em 0 1em;
+  line-height: 1.3;
 }
 
 h4 {
@@ -38,8 +39,12 @@ p, ul, li, blockquote, figcaption {
   line-height: 1.4;
 }
 
+p strong {
+  font-weight: bold;
+}
+
 li {
-  font-size: 1.1rem;
+  font-size: 1.3rem;
 }
 
 p {
@@ -97,6 +102,10 @@ a {
 
 a:hover {
   text-decoration: none;
+}
+
+.hidden {
+  display: none;
 }
 
 #container {
