--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -104,6 +104,11 @@ a:hover {
   text-decoration: none;
 }
 
+.read-more {
+  cursor: pointer;
+  text-decoration: underline;
+}
+
 .hidden {
   display: none;
 }
@@ -113,6 +118,7 @@ a:hover {
   margin-right: 20px;
   margin-top: 2em;
   margin-bottom: 2em;
+  padding-bottom: 2em;
   /*width: 100%;*/
   max-width: 600px;
 }
