--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -9,13 +9,15 @@ h1, h2, h3 {
 }
 
 h1 {
-  font-size: 2.4rem;
+  font-size: 2.8rem;
   margin: 0;
   font-family: 'Playfair Display SC', serif;
 }
 
 h2 {
+  font-family: 'Playfair Display SC', serif;
   font-size: 1.4rem;
+  line-height: 1.3;
   margin: 1em 0;
 }
 
